# RayTracer

./: CMakeLists.txt  CMakeSettings.json
RayTracer/: CMakeLists.txt  RayTracer.cpp  RayTracer.h  main.cpp
